added insertion of parsed data into database